tests/samples/0067/parse-error.txt
error[P0041]: unexpected token `[`, expected an expression
  --> 0067/code.ara:2:10
  |
2 |     $a = [];
  |          ^ unexpected token `[`, expected an expression

